# forgetpass

./: README.md  com.github.alexkdeveloper.forgetpass.json  meson.build
data/: com.github.alexkdeveloper.forgetpass.appdata.xml.in  com.github.alexkdeveloper.forgetpass.desktop.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  be.po  es.po  eu.po  forgetpass.pot  it.po  meson.build  nl.po  ru.po  tr.po  uk_UA.po
src/: crypto.vala  main.vala  meson.build  window.vala
src/vapi/: gcrypt.vapi
